--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
   "homepage": "https://github.com/up-htmlacademy/12332-Pink",
   "devDependencies": {
     "grunt": "^0.4.5",
-    "grunt-lintspaces": "^0.6.0"
+    "grunt-contrib-concat": "^0.5.1",
+    "grunt-contrib-imagemin": "^0.9.3",
+    "grunt-contrib-uglify": "^0.8.0",
+    "grunt-lintspaces": "^0.6.0",
+    "grunt-notify": "^0.4.1"
   }
 }
