--- a/package.json
+++ b/package.json
@@ -17,9 +17,13 @@
   "homepage": "https://github.com/up-htmlacademy/12332-Pink",
   "devDependencies": {
     "grunt": "^0.4.5",
+    "grunt-autoprefixer": "^2.2.0",
     "grunt-contrib-concat": "^0.5.1",
+    "grunt-contrib-cssmin": "^0.12.2",
     "grunt-contrib-imagemin": "^0.9.3",
+    "grunt-contrib-less": "^1.0.0",
     "grunt-contrib-uglify": "^0.8.0",
+    "grunt-contrib-watch": "^0.6.1",
     "grunt-lintspaces": "^0.6.0",
     "grunt-notify": "^0.4.1"
   }
