--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "grunt-contrib-uglify": "^0.8.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-lintspaces": "^0.6.0",
-    "grunt-notify": "^0.4.1"
+    "grunt-notify": "^0.4.1",
+    "load-grunt-tasks": "^3.1.0"
   }
 }
