--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "grunt-lintspaces": "^0.6.0",
     "grunt-notify": "^0.4.1",
     "load-grunt-tasks": "^3.1.0"
+  },
+  "dependencies": {
+    "normalize.css": "^3.0.2"
   }
 }
